# ChameleonFlow

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  TASK.txt  index.html  main.py  pyproject.toml
client/: __init__.py
client/app/: __init__.py
client/tests/: __init__.py  test_agent.py  test_bandit.py  test_sensor.py  test_state.py  test_transports.py
docs/: datasets.md  training.md
infra/compose/: docker-compose.yml
ml/: __init__.py
ml/datasets/: registry.yaml
ml/tests/: test_compare_sensor_models.py  test_dataset_registry.py  test_evaluate_sensor_loo.py  test_evaluate_sensor_transfer.py  test_generate_controlled_sensor_domains.py  test_generate_synthetic_sensor_metrics.py  test_infer_morpher.py  test_infer_sensor.py  test_morpher_pipeline.py  test_prepare_browser_iat.py  test_prepare_browser_iat_from_pcap.py  test_prepare_cicids2017_sensor_metrics.py  test_prepare_iscxvpn2016_sensor_metrics.py  test_prepare_sensor_metrics.py  test_run_sensor_ping_experiment.py  test_sensor_experiment_dataset.py  test_sensor_pipeline.py  test_train_morpher.py  test_train_sensor.py  test_train_sensor_multidomain.py
ml/training/: __init__.py  compare_sensor_models.py  dataset_registry.py  evaluate_sensor_loo.py  (+21 more)
scripts/: build_sensor_experiment_dataset.sh  evaluate_sensor_transfer.sh  generate_sensor_sample.sh  infer_morpher.sh  infer_sensor.sh  init_sensor_experiment.sh  prepare_iscxvpn2016_sensor.sh  run_sensor_ping_experiment.sh  train_morpher.sh  train_sensor.sh  train_sensor_multidomain.sh
shared/: __init__.py  contracts.py
tests/: test_cli.py
(+31 files in other folders)
